# confluent-kafka-consumer

./: .gitignore  pyproject.toml  requirements.txt
confluent_kafka_consumer/src/: main.py
confluent_kafka_consumer/src/config/: kafka.py
confluent_kafka_consumer/src/service/: consumer.py
